[package]
name = "avcapture"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/avcapture-rs"
repository = "https://github.com/doom-fish/avcapture-rs"
description = "Safe Rust bindings for Apple's AVCapture devices, sessions, inputs, connections, and capture outputs on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["avcapture", "avfoundation", "camera", "microphone", "macos"]
categories = ["multimedia::video", "multimedia::audio", "api-bindings", "os::macos-apis"]
rust-version = "1.70"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
    "COVERAGE.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "avcapture"
crate-type = ["lib"]

[features]
default = []
async = []

[dependencies]
apple-cf = { version = ">=0.4, <0.9", default-features = false, features = ["cv", "cm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.1, <0.3" }

[dev-dependencies]
pollster = "0.3"

[patch.crates-io]
doom-fish-utils = { path = "../doom-fish-utils" }

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_smoke_surface"

[[example]]
name = "14_async_session_streams"
required-features = ["async"]

[profile.release]
debug = "full"
strip = "none"
